# HC32-MDK

./: .clangd  .eide.usr.ctx.json  .gitignore  CMakeLists.txt  README.md
.eide/: eide.json  env.ini  files.options.yml
Arduino/: Arduino.h  HardwareSerial.cpp  HardwareSerial.h  Print.cpp  Print.h  RingBuf.h  RingBuffer.h  Stream.cpp  WVariant.h  core_debug.h  delay.h  wiring_digital.cpp  wiring_digital.h
Arduino/Core/drivers/adc/: adc.cpp
Arduino/Core/drivers/gpio/: gpio.h
Arduino/Core/drivers/i2c/: HardwareI2cSlave.cpp  HardwareI2cSlave.h  Wire.cpp  Wire.h
Arduino/Core/drivers/irqn/: irqn.cpp  irqn.h
Arduino/Core/drivers/spi/: SPI.cpp  SPI.h
Arduino/Core/drivers/sysclock/: sysclock.cpp  sysclock.h  systick.c  systick.h
Arduino/Core/drivers/usart/: usart_config.h
Arduino/Core/variants/hc32f460xx/: variant.cpp  variant.h
CMSIS/Device/HDSC/hc32f4xx/Source/: syscalls.c
Driver/inc/: hc32_ll.h  hc32_ll_utility.h
Driver/src/: hc32_ll_clk.c  hc32_ll_pwc.c  hc32_ll_utility.c
Libraries/Bq40z50/: Bq40z50.cpp  Bq40z50.h
Libraries/EnhancedButton/src/: EnhancedButton.h
Libraries/HardWareI2C/: HardwareI2c.cpp
Libraries/MP2762A/: Mp2762A.cpp  Mp2762A.h
Libraries/Parser/include/: SparkFun_Extensible_Message_Parser.h
Libraries/Parser/src/: Parse_BT.cpp  Parse_Unicore_Hash.cpp  SparkFun_Extensible_Message_Parser.cpp
Libraries/cm_backtrace/: FaultHandle.cpp  FaultHandler.cpp  cm_backtrace.h  cmb_cfg.h  cmb_def.h
Libraries/rt-thread/bsp/: board.c  rtconfig.h  usart.cpp  usart.h
Libraries/rt-thread/include/: rthw.h
Libraries/rt-thread/src/: clock.c  kservice.c
app/: Readme.txt
app/EWARM/: HC32F460JETA.ewd  HC32F460JETA.ewp  HC32F460JETA.eww
app/EWARM/config/debugger/: HC32F460xE.ddf
app/EWARM/config/flashloader/: FlashHC32F460_otp.flash  FlashHC32F460xE.flash
app/EWARM/config/linker/: HC32F460.icf
app/GCC/: .cproject  .project  hc32f460jeta_PyOCDDebug.launch  hc32f460jeta_PyOCDDownload.launch
app/MDK/: JLinkLog.txt  RAM.ini  hc32f460jeta.uvguix.gtc  hc32f460jeta.uvguix.guoti  hc32f460jeta.uvoptx  hc32f460jeta.uvprojx
app/MDK/RTE/_hc32f460jeta_Debug/: RTE_Components.h
app/MDK/RTE/_hc32f460jeta_Release/: RTE_Components.h
app/MDK/config/: debug_init.ini  release_init.ini
app/MDK/output/debug/: adc.d  adc_config.d  addon_gpio.d  board.d  clock.d  cm_backtrace.d  cmb_fault.d  cmb_fault.lst  cmd.d  components.d  context_rvds.d  context_rvds.lst  cpu.d  cpuport.d  dtostrf.d  enhancedbutton.d  ev_hc32f460_lqfp100_v2.d  faulthandler.d  finsh_port.d  hardwarei2c.d  hardwarei2cslave.d  hardwareserial.d  hc32_ll.d  hc32_ll_adc.d  hc32_ll_aes.d  hc32_ll_aos.d  hc32_ll_can.d  hc32_ll_clk.d  hc32_ll_cmp.d  hc32_ll_crc.d  hc32_ll_dbgc.d  hc32_ll_dcu.d  hc32_ll_dma.d  hc32_ll_efm.d  hc32_ll_emb.d  hc32_ll_event_port.d  hc32_ll_fcg.d  hc32_ll_fcm.d  hc32_ll_gpio.d  hc32_ll_hash.d  (+75 more)
app/source/: hc32f4xx_conf.h  main.cpp
app/source/inc/: Key.h  Led.h  Message.h  System.h  Task.h  debug.h  global.h  powerControl.h  settings.h
app/source/src/: Key.cpp  Led.cpp  Message.cpp  System.cpp  Task.cpp  charger_control.c  charger_control.h  powerControl.cpp
bsp/SPI/: SPI.cpp  SPI.h
bsp/USART/: usart.cpp  usart.h  usart_config.cpp  usart_config.h  usart_handlers.h
bsp/ev_hc32f460_lqfp100_v2/: ev_hc32f460_lqfp100_v2.h
